--- a/userdata/templates/configmap.yaml.template
+++ b/userdata/templates/configmap.yaml.template
@@ -11,6 +11,7 @@ data:
   TC_OS_NAMESPACE: "${os_namespace}"
   TC_OKE_NODEPOOL: "${nodepool_label}"
   TC_OCIR_REPO: "${registry}/${tenancy_name}/${repo_name}"
+  TC_IMAGE_LABEL: "${image_label}"
   TC_DB_HOST: "${db_ip}"
   TC_DB_NAME: "${db_name}"
   TC_DB_USER: "${db_user}"
