new file:   Transcoder REST API documentation.docx 	modified:   main.tf 	modified:   modules/network/main.tf 	new file:   modules/oci-event/output.tf 	modified:   modules/transcoder/main.tf 	modified:   modules/transcoder/variables.tf 	modified:   schema.yaml 	new file:   userdata/api/Dockerfile 	new file:   userdata/api/bootstrap.sh 	new file:   userdata/api/index.py 	modified:   userdata/scheduler/Dockerfile 	modified:   userdata/scheduler/consumer.py 	modified:   userdata/scheduler/new_job.py 	modified:   userdata/scripts/create_db.sh 	renamed:    userdata/scripts/deploy_scheduler.sh -> userdata/scripts/deploy.sh 	new file:   userdata/templates/api-server.yaml.template 	modified:   userdata/templates/configmap.yaml.template 	modified:   userdata/templates/scheduler.yaml.template 	modified:   userdata/transcoder/Dockerfile 	modified:   userdata/transcoder/transcode.sh 	modified:   variables.tf

--- a/userdata/scheduler/Dockerfile
+++ b/userdata/scheduler/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.9-slim-buster
 
 RUN pip install oci && pip install cx_Oracle
 RUN pip install kubernetes
+RUN pip install pymysql
 
 ADD consumer.py /app/consumer.py
 ADD new_job.py /app/new_job.py
