modified:   datasources.tf 	modified:   main.tf 	modified:   modules/stg-server/main.tf 	modified:   modules/transcoder/main.tf 	modified:   modules/transcoder/variables.tf 	modified:   userdata/scheduler/Dockerfile 	modified:   userdata/transcoder/Dockerfile 	modified:   variables.tf

--- a/userdata/scheduler/Dockerfile
+++ b/userdata/scheduler/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.9-slim-buster
 
-RUN pip install oci && pip install cx_Oracle
+RUN pip install oci
 RUN pip install kubernetes
 RUN pip install pymysql
 
