--- a/userdata/transcoder/Dockerfile
+++ b/userdata/transcoder/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.9-slim-buster
 
-RUN pip install oci && pip install cx_Oracle
+RUN pip install oci
 RUN pip install oci-cli
 RUN apt update -y
 RUN apt install -y default-mysql-client
@@ -11,10 +11,11 @@ WORKDIR /app
 #Install the latest release version of ffmpeg (4.4)
 RUN apt install -y wget
 RUN apt install -y xz-utils
-RUN wget https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-amd64-static.tar.xz
-RUN tar xvfJ ffmpeg-release-amd64-static.tar.xz
-RUN ln -s /app/ffmpeg-4.4-amd64-static/ffmpeg /usr/local/bin/ffmpeg
-RUN ln -s /app/ffmpeg-4.4-amd64-static/ffprob /usr/local/bin/ffprob
+RUN wget https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-${cpu_arch}-static.tar.xz
+RUN tar xvfJ ffmpeg-release-${cpu_arch}-static.tar.xz; rm ffmpeg-release-${cpu_arch}-static.tar.xz
+
+RUN fname=$(ls -d ffmpeg*); ln -s /app/$fname/ffmpeg /usr/local/bin/ffmpeg; \
+                            ln -s /app/$fname/ffmpeg /usr/local/bin/ffprob
 
 ADD transcode.sh /app/transcode.sh
 RUN chmod +x /app/transcode.sh
