modified:   Transcoder REST API documentation.pdf 	new file:   modules/oci-stream/data.tf 	modified:   modules/oci-stream/main.tf 	modified:   schema.yaml 	modified:   userdata/api/Dockerfile 	modified:   userdata/api/index.py 	modified:   userdata/scripts/create_db.sh 	modified:   userdata/scripts/deploy.sh 	new file:   userdata/scripts/deploy_new.sh 	modified:   variables.tf

--- a/userdata/api/Dockerfile
+++ b/userdata/api/Dockerfile
@@ -3,10 +3,12 @@ FROM python:3.9-slim-buster
 # Installing packages
 RUN pip install flask
 RUN pip install flask_httpauth
+RUN pip install flask-cors
 RUN pip install werkzeug
 RUN pip install pymysql
 RUN pip install kubernetes
 RUN pip install oci
+RUN pip install putz
 
 
 # Defining working directory and adding source code
