modified:   main.tf 	modified:   modules/network/main.tf 	modified:   modules/oci-event/main.tf 	modified:   modules/transcoder/main.tf 	modified:   modules/transcoder/variables.tf 	modified:   schema.yaml 	modified:   userdata/api/Dockerfile 	modified:   userdata/api/bootstrap.sh 	modified:   userdata/api/index.py 	new file:   userdata/js/assets/css/bootstrap.min.css 	new file:   userdata/js/assets/css/create.css 	new file:   userdata/js/assets/css/login.css 	new file:   userdata/js/assets/css/main.css 	new file:   userdata/js/assets/css/project.css 	new file:   userdata/js/assets/css/transcodingOKE.css 	new file:   userdata/js/assets/img/three-dots-vertical.svg 	new file:   userdata/js/assets/js/login.js 	new file:   userdata/js/assets/js/project.js 	new file:   userdata/js/assets/js/transcodingOKE.js 	new file:   userdata/js/login.html 	new file:   userdata/js/project.html 	new file:   userdata/js/transcodingOKE.html 	new file:   userdata/nginx/Dockerfile 	new file:   userdata/nginx/nginx.conf 	modified:   userdata/scheduler/consumer.py 	modified:   userdata/scripts/create_db.sh 	modified:   userdata/scripts/deploy.sh 	new file:   userdata/scripts/generate_admin_password.py 	modified:   userdata/templates/api-server.yaml.template 	modified:   userdata/templates/configmap.yaml.template 	modified:   userdata/transcoder/Dockerfile 	modified:   userdata/transcoder/transcode.sh 	modified:   variables.tf

--- a/userdata/api/Dockerfile
+++ b/userdata/api/Dockerfile
@@ -10,12 +10,14 @@ RUN pip install kubernetes
 RUN pip install oci
 RUN pip install putz
 
+RUN apt -y update && apt -y install build-essential python-dev
+RUN pip install uwsgi
 
 # Defining working directory and adding source code
 WORKDIR /app
 COPY bootstrap.sh ./
 RUN chmod +x bootstrap.sh
-COPY index.py cert.pem key.pem ./
+COPY index.py ./
 # Start app
 EXPOSE 5000
 ENTRYPOINT ["/app/bootstrap.sh"]
