--- a/userdata/transcoder/Dockerfile
+++ b/userdata/transcoder/Dockerfile
@@ -11,11 +11,12 @@ WORKDIR /app
 #Install the latest release version of ffmpeg (4.4)
 RUN apt install -y wget
 RUN apt install -y xz-utils
+RUN apt install -y bc
 RUN wget https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-${cpu_arch}-static.tar.xz
 RUN tar xvfJ ffmpeg-release-${cpu_arch}-static.tar.xz; rm ffmpeg-release-${cpu_arch}-static.tar.xz
 
 RUN fname=$(ls -d ffmpeg*); ln -s /app/$fname/ffmpeg /usr/local/bin/ffmpeg; \
-                            ln -s /app/$fname/ffmpeg /usr/local/bin/ffprob
+                            ln -s /app/$fname/ffprobe /usr/local/bin/ffprobe
 
 ADD transcode.sh /app/transcode.sh
 RUN chmod +x /app/transcode.sh
