--- a/userdata/templates/api-server.yaml.template
+++ b/userdata/templates/api-server.yaml.template
@@ -18,7 +18,7 @@ spec:
       serviceAccountName: transcoder
       containers:
       - name: api-server
-        image: ${registry}/${tenancy_name}/${repo_name}/${image_name}:${image_label}
+        image: ${registry}/${tenancy_name}/${repo_name}/${api_image_name}:${image_label}
         imagePullPolicy: Always
         envFrom:
         - configMapRef:
@@ -30,10 +30,25 @@ spec:
             secretKeyRef:
                name: db-password
                key: password
+      - name: nginx
+        image: ${registry}/${tenancy_name}/${repo_name}/${nginx_image_name}:${image_label}
+        imagePullPolicy: Always
+        volumeMounts:
+        - name: "config"
+          mountPath: "/etc/nginx/ssl/ssl.crt"
+          subPath: "ssl.crt"
+        - name: "config"
+          mountPath: "/etc/nginx/ssl/ssl.key"
+          subPath: "ssl.key"
+
       imagePullSecrets:
         - name: ocir-secret
       nodeSelector:
         name: tc-nodepool
+      volumes:
+        - name: "config"
+          configMap:
+            name: "ssl-config"
 
 ---
 apiVersion: v1
@@ -45,8 +60,11 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
+  - name: http
+    port: 80
+    targetPort: 80
   - name: https
     port: 443
-    targetPort: 5000
+    targetPort: 443
   selector:
     app: api-server
