--- a/userdata/templates/configmap.yaml.template
+++ b/userdata/templates/configmap.yaml.template
@@ -18,4 +18,4 @@ data:
   TC_DB_USER: "${db_user}"
   TC_CPU_REQUEST_PER_JOB: "${cpu_request_per_job}"
   TC_FFMPEG_CONFIG: "${ffmpeg_config}"
-  TC_FFMPEG_HLS_BASE_URL: "${hls_stream_url}"
+  TC_CDN_BASE_URL: "${cdn_base_url}"
