--- a/userdata/templates/configmap.yaml.template
+++ b/userdata/templates/configmap.yaml.template
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: "${project_name}"
-  namespace: transcode
+  namespace: ${namespace}
 data:
   TC_STREAM_ENDPOINT: "${stream_endpoint}"  
   TC_STREAM_OCID: "${stream_ocid}" 
